--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "@types/node": "^20.11.20",
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.17",
     "husky": "^9.0.11",
