--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     ]
   },
   "dependencies": {
+    "@tanstack/vue-query": "^5.22.2",
+    "dayjs": "^1.11.10",
+    "lodash": "^4.17.21",
     "vue": "^3.4.19",
     "vue-router": "4"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.20",
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.17",
